--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
 		"vue": "^2.6.14",
 		"vue-material-design-icons": "^4.13.0",
 		"vue-router": "^3.5.3",
+		"vue-simplemde": "^2.0.1",
+		"@fortawesome/fontawesome-free": "^6.1.1",
 		"vue-tabulator": "^1.3.0",
 		"vuex": "^3.6.2"
 	},
