--- a/package.json
+++ b/package.json
@@ -24,16 +24,16 @@
 		"stylelint:fix": "stylelint css/*.css css/*.scss src/**/*.scss src/**/*.vue --fix"
 	},
 	"dependencies": {
-		"@fortawesome/fontawesome-free": "^6.1.1",
 		"@nextcloud/axios": "^1.9.0",
 		"@nextcloud/dialogs": "^3.1.2",
 		"@nextcloud/moment": "^1.1.1",
 		"@nextcloud/router": "^2.0.0",
 		"@nextcloud/vue": "^4.3.0",
+		"@tiptap/starter-kit": "^2.0.0-beta.183",
+		"@tiptap/vue-2": "^2.0.0-beta.77",
 		"vue": "^2.6.14",
 		"vue-material-design-icons": "^4.13.0",
 		"vue-router": "^3.5.3",
-		"vue-simplemde": "^2.0.0",
 		"vue-tabulator": "^1.3.0",
 		"vuex": "^3.6.2"
 	},
