--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
 		"@nextcloud/moment": "^1.1.1",
 		"@nextcloud/router": "^2.0.0",
 		"@nextcloud/vue": "^4.3.0",
+		"@tiptap/extension-task-item": "^2.0.0-beta.31",
+		"@tiptap/extension-task-list": "^2.0.0-beta.26",
 		"@tiptap/starter-kit": "^2.0.0-beta.183",
 		"@tiptap/vue-2": "^2.0.0-beta.77",
 		"vue": "^2.6.14",
