--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"stylelint:fix": "stylelint css/*.css css/*.scss src/**/*.scss src/**/*.vue --fix"
 	},
 	"dependencies": {
+		"@nextcloud/auth": "^1.3.0",
 		"@nextcloud/axios": "^1.9.0",
 		"@nextcloud/dialogs": "^3.1.2",
 		"@nextcloud/event-bus": "^2.1.1",
@@ -34,6 +35,7 @@
 		"@tiptap/extension-task-list": "^2.0.0-beta.26",
 		"@tiptap/starter-kit": "^2.0.0-beta.183",
 		"@tiptap/vue-2": "^2.0.0-beta.77",
+		"debounce": "^1.2.1",
 		"vue": "^2.6.14",
 		"vue-material-design-icons": "^4.13.0",
 		"vue-router": "^3.5.3",
