--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "tables",
 	"description": "Manage data within tables.",
-	"version": "0.2.0-RC1",
+	"version": "0.2.0",
 	"author": "Florian Steffens <flost-dev@mailbox.org",
 	"bugs": {
 		"url": "https://github.com/datenangebot/tables/issues"
